<resources>
    <string name="app_name">Agilize</string>
    <string name="nickname">Enter Nickname</string>
    <string name="pasword">Enter Password</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="loginBtn">Login</string>
    <string name="search_projects">Q Search Projects</string>
    <string name="projects">Projects</string>
    <string name="project_name">Project Name</string>
    <string name="backlog">BackLog</string>
    <string name="to_do">To Do</string>
    <string name="doing">Doing</string>
    <string name="pending_confirmation">To Validate</string>
    <string name="done">Done</string>
    <string name="task_name">Task Name</string>
    <string name="sprintnum">SprintNum</string>
    <string name="short_description">Short Description</string>
    <string name="sumary">Sumary</string>
    <string name="task_name_window">Task name</string>
    <string name="members">Members</string>
    <string name="description">Description</string>
    <string name="date_creation">Date Creation</string>
    <string name="deadline">DeadLine</string>
    <string name="currentstate">CurrentState</string>
    <string name="sprint">Sprint</string>
    <string name="estimatedtime">EstimatedTime</string>
    <string name="error">Task Stat</string>
    <string name="apply">Apply</string>
    <string name="final_time">Final Time</string>
    <string name="date_endend">Date Endend</string>
    <string name="obtener_resumen">Obtain Sumary</string>
    <string name="ended_tasks">Ended Tasks</string>
    <string name="final_sumary">Sumary</string>
    <string name="task_final_stats">Task Final Stats</string>
    <string name="task_final_members">Task Final Members</string>
    <string name="task_final_description">Task Final Description</string>
    <string name="search">Search</string>
    <string name="user_nickname">User Nickname</string>
    <string name="user_nickname_account">User Nickname</string>
    <string name="user_name">User Name</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="user_surname">User Surname</string>
    <string name="email">Email</string>
    <string name="user_email">User Email</string>
    <string name="password">Password</string>
    <string name="user_password">User Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="change_user_info">Change user Info</string>
    <string name="change_languaje">Change Languaje</string>
    <string name="english">English</string>
    <string name="catalan">Catalan</string>
    <string name="castellano">Spanish</string>
    <string name="account">Account</string>
    <string name="obtaining_user_error">There was an error loading one or more users</string>
    <string name="saving_user_error">There was an error saving the user data</string>
    <string name="login_error">Error logging in</string>
    <string name="obtaining_projects_error">There was an error loading one or more projects</string>
    <string name="saving_projects_error">There was an error saving the project</string>
    <string name="updating_task_error">Error updating the task</string>
    <string name="task_saving_error">Error saving the task</string>
    <string name="confirm_status_password">Comprove Password</string>
    <string name="password_correlation_null">Please enter a valid value</string>
    <string name="password_correlation_error">The two passwords do not match</string>
</resources>