<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/FgTaskEnded"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/final_sumary"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:fontFamily="@font/outfit_regular"
            android:background="@color/Label"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center|start"
            android:layout_margin="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_final_stats"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginBottom="1dp"
                android:background="@color/Label"/>
            <TextView
                android:id="@+id/TxtFinalDateCreation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:textAlignment="center"
                android:hint="@string/date_creation"
                android:textSize="25sp"
                android:fontFamily="@font/outfit_regular"
                android:background="@drawable/rounded_edittext"/>
            <TextView
                android:id="@+id/TxtFinalDateEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:textAlignment="center"
                android:hint="@string/date_endend"
                android:textSize="25sp"
                android:fontFamily="@font/outfit_regular"
                android:background="@drawable/rounded_edittext"/>
            <TextView
                android:id="@+id/TxtFinalCurrentState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:textAlignment="center"
                android:hint="@string/currentstate"
                android:textSize="25sp"
                android:fontFamily="@font/outfit_regular"
                android:background="@drawable/rounded_edittext"/>
            <TextView
                android:id="@+id/TxtFinalSprint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:textAlignment="center"
                android:hint="@string/sprint"
                android:textSize="25sp"
                android:fontFamily="@font/outfit_regular"
                android:background="@drawable/rounded_edittext"/>
            <TextView
                android:id="@+id/TxtFinalTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textAlignment="center"
                android:hint="@string/final_time"
                android:textSize="25sp"
                android:fontFamily="@font/outfit_regular"
                android:background="@drawable/rounded_edittext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center|start"
            android:layout_margin="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_final_members"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginBottom="1dp"
                android:background="@color/Label"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RVFinalMembers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Focus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center|start"
            android:layout_margin="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_final_description"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginBottom="1dp"
                android:background="@color/Label"/>
            <TextView
                android:id="@+id/TxtFinalDesciprion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:textAlignment="center"
                android:hint="@string/description"
                android:textSize="18sp"
                android:fontFamily="@font/inter_regular"
                android:background="@drawable/rounded_edittext"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
