<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/Button"
            android:layout_marginBottom="16dp"
            >

            <ImageButton
                android:id="@+id/returnBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.75"
                android:background="@color/Orange"
                android:src="@drawable/return_img"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/account"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center"
                />

            <ImageButton
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.75"
                android:background="@color/Orange"
                android:src="@drawable/save_img"
                tools:ignore="ContentDescription" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_textview_acount"
                android:layout_marginVertical="10dp">

                <EditText
                    android:id="@+id/EtxtUserNicknameAccount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/user_nickname_account"
                    android:fontFamily="@font/inter_variable_font"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:textSize="25sp"
                    android:textColorHint="@color/white"
                    tools:ignore="Autofill,LabelFor,TextFields"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/TxtChangeUserInfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="136dp"
                android:textAlignment="center"
                android:text="@string/change_user_info"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/white"
                android:background="@drawable/rounded_label_account"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext_tasks"
                android:layout_marginVertical="3dp">

                <TextView
                    android:id="@+id/TxtUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minWidth="136dp"
                    android:textAlignment="center"
                    android:text="@string/name"
                    android:fontFamily="@font/inter_regular"
                    android:background="@drawable/rounded_edittext"/>

                <EditText
                    android:id="@+id/EtxtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/user_name"
                    android:fontFamily="@font/inter_variable_font"
                    android:background="@android:color/transparent"
                    tools:ignore="Autofill,LabelFor,TextFields"
                    android:textAlignment="center"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext_tasks"
                android:layout_marginVertical="3dp">

                <TextView
                    android:id="@+id/TxtUserSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minWidth="136dp"
                    android:textAlignment="center"
                    android:text="@string/surname"
                    android:fontFamily="@font/inter_regular"
                    android:background="@drawable/rounded_edittext"/>

                <EditText
                    android:id="@+id/EtxtUserSurname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/user_surname"
                    android:fontFamily="@font/inter_variable_font"
                    android:background="@android:color/transparent"
                    tools:ignore="Autofill,LabelFor,TextFields"
                    android:textAlignment="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext_tasks"
                android:layout_marginVertical="3dp">

                <TextView
                    android:id="@+id/TxtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minWidth="136dp"
                    android:textAlignment="center"
                    android:text="@string/email"
                    android:fontFamily="@font/inter_regular"
                    android:background="@drawable/rounded_edittext"/>

                <EditText
                    android:id="@+id/EtxtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/user_email"
                    android:fontFamily="@font/inter_variable_font"
                    android:background="@android:color/transparent"
                    tools:ignore="Autofill,LabelFor,TextFields"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/TxtChangePasword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="136dp"
                android:textAlignment="center"
                android:text="@string/change_password"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/white"
                android:background="@drawable/rounded_label_account"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext_tasks"
                android:layout_marginVertical="3dp">

                <TextView
                    android:id="@+id/TxtPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minWidth="136dp"
                    android:textAlignment="center"
                    android:text="@string/password"
                    android:fontFamily="@font/inter_regular"
                    android:background="@drawable/rounded_edittext"/>

                <EditText
                    android:id="@+id/EtxtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/user_password"
                    android:password="true"
                    android:fontFamily="@font/inter_variable_font"
                    android:background="@android:color/transparent"
                    tools:ignore="Autofill,LabelFor,TextFields"
                    android:textAlignment="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext_tasks"
                android:layout_marginVertical="3dp">

                <TextView
                    android:id="@+id/TxtConfirmPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minWidth="136dp"
                    android:textAlignment="center"
                    android:text="@string/confirm_password"
                    android:fontFamily="@font/inter_regular"
                    android:background="@drawable/rounded_edittext"/>

                <EditText
                    android:id="@+id/EtxtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/user_password"
                    android:password="true"
                    android:fontFamily="@font/inter_variable_font"
                    android:background="@android:color/transparent"
                    tools:ignore="Autofill,LabelFor,TextFields"
                    android:textAlignment="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginVertical="3dp">

                <Button
                    android:id="@+id/confirmChangePasswordBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Button"
                    android:text="@string/confirm_status_password" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/TxtChangeLanguaje"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="136dp"
                android:textAlignment="center"
                android:text="@string/change_languaje"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/white"
                android:background="@drawable/rounded_label_account"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="10dp">
            <Button
                android:id="@+id/englishBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/english"
                android:backgroundTint="@color/Button"
                />
            <Button
                android:id="@+id/catalanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/catalan"
                android:backgroundTint="@color/Button"
                />
            <Button
                android:id="@+id/spanishBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/castellano"
                android:backgroundTint="@color/Button"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>