<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/Button"
        >

        <ImageButton
            android:id="@+id/imgAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/Orange"
            android:src="@drawable/account_img"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:fontFamily="@font/outfit_regular"
            android:gravity="center"
            />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/rounded_edittext"
        android:layout_margin="10dp"
        android:hint="@string/search_projects"
        android:fontFamily="@font/inter_variable_font"
        android:textSize="15sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/projects"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:fontFamily="@font/outfit_regular"/>

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerViewProjects"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"/>
    


</LinearLayout>