<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.androida.com/tools"
    android:id="@+id/RVALLTask"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_edittext_projects"
    android:layout_margin="10dp"
    android:padding="5dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="4dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/task_img"
                />

            <TextView
                android:id="@+id/taskName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_name"
                android:fontFamily="@font/inter_variable_font"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_textview_sprint"
            android:padding="2dp"
            >
            <TextView
                android:id="@+id/sprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sprintnum"
                android:fontFamily="@font/inter_variable_font"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_textview_sprint"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_description"
            android:fontFamily="@font/inter_variable_font"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <Button
            android:id="@+id/Sumary"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:backgroundTint="@color/Button"
            android:text="@string/sumary"
            android:fontFamily="@font/inter_variable_font"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>
</LinearLayout>